# Kay

./: .gitignore  README.md  meson.build  meson_options.txt
AK/: AK.h  AKBakeable.cpp  AKBakeable.h  AKBorderRadius.h  AKNode.cpp  AKNode.h  AKRenderable.cpp  AKRenderable.h  AKScene.cpp  AKScene.h  AKTarget.cpp  AKTarget.h  AKTransform.h  AKWeak.h
AK/Widgets/: AKContainer.h  AKImage.cpp  AKImage.h  AKPath.cpp  AKPath.h  AKRenderableRect.cpp  AKRenderableRect.h  AKRoundContainer.cpp  AKRoundContainer.h  AKSubScene.cpp  AKSubScene.h
doxygen/: Doxyfile  Layout.xml
doxygen/md/: Contact.md  Downloads.md  Environment.md  Examples.md  MainPage.md
doxygen/md/doc/: input.md
examples/basic/: main.cpp  meson.build
examples/kay-louvre/: main.cpp  meson.build
examples/kay-srm/: main.cpp  meson.build
include/: AK.h  AKApplication.h  AKFrame.h  AKLabel.h  AKObject.h  AKPainter.h  AKPoint.h  AKRect.h  AKRegion.h  AKSurface.h  AKToplevel.h  AKWidget.h
include/private/: AKApplication.h  AKFrame.h  AKSurface.h  AKToplevel.h
scripts/: env.sh  install_skia.sh
scripts/docs/: gen_doc.sh
src/: AK.cpp  AK.h  AKApplication.cpp  AKBakeable.cpp  AKBakeable.h  AKBitset.h  AKContainer.h  AKDiv.cpp  AKDiv.h  AKFrame.cpp  AKImage.cpp  AKImage.h  AKLabel.cpp  AKLayout.cpp  AKLayout.h  AKNode.cpp  AKNode.h  AKObject.cpp  AKObject.h  AKPainter.cpp  AKRegion.cpp  AKRenderable.cpp  AKRenderable.h  AKScene.cpp  AKScene.h  AKSolidColor.cpp  AKSolidColor.h  AKSubScene.cpp  AKSubScene.h  AKSurface.cpp  AKTarget.cpp  AKTarget.h  AKToplevel.cpp  AKTransform.h  AKWeak.cpp  AKWeak.h  AKWidget.cpp
src/AK/: AK.cpp  AK.h  AKAlignment.h  AKAnimation.cpp  AKAnimation.h  AKApplication.cpp  AKApplication.h  AKBackgroundDamageTracker.h  AKBitset.h  AKBooleanEventSource.cpp  AKBooleanEventSource.h  AKBorderRadius.h  AKBrush.h  AKChanges.h  AKColors.h  AKCursor.cpp  AKCursor.h  AKEdge.h  AKEventSource.cpp  AKEventSource.h  AKGLContext.cpp  AKGLContext.h  AKLayout.cpp  AKLayout.h  AKLog.cpp  AKLog.h  AKObject.cpp  AKObject.h  AKOrientation.h  AKPainter.cpp  AKPainter.h  AKPen.h  AKRRect.h  AKSafeEventQueue.cpp  AKSafeEventQueue.h  AKScene.cpp  AKScene.h  AKSceneTarget.cpp  AKSceneTarget.h  AKSignal.cpp  (+14 more)
src/AK/effects/: AKBackgroundBlurEffect.cpp  AKBackgroundBlurEffect.h  AKBackgroundBoxShadowEffect.cpp  AKBackgroundBoxShadowEffect.h  AKBackgroundEffect.cpp  AKBackgroundEffect.h  AKBackgroundImageShadowEffect.cpp  AKBackgroundImageShadowEffect.h  AKBackgroundShadowEffect.cpp  AKBackgroundShadowEffect.h  AKEdgeShadow.cpp  AKEdgeShadow.h  AKRoundCornersEffect.cpp  AKRoundCornersEffect.h
src/AK/events/: AKBakeEvent.h  AKDestroyEvent.h  AKEvent.cpp  AKEvent.h  AKInputEvent.cpp  AKInputEvent.h  AKKeyboardEnterEvent.h  AKKeyboardEvent.h  AKKeyboardKeyEvent.cpp  AKKeyboardKeyEvent.h  AKKeyboardLeaveEvent.h  AKKeyboardModifiersEvent.h  AKLayoutEvent.h  AKPointerButtonEvent.h  AKPointerEnterEvent.h  AKPointerEvent.h  AKPointerHoldBeginEvent.h  AKPointerHoldEndEvent.h  AKPointerLeaveEvent.h  AKPointerMoveEvent.h  AKPointerPinchBeginEvent.h  AKPointerPinchEndEvent.h  AKPointerPinchUpdateEvent.h  AKPointerScrollEvent.h  AKPointerSwipeBeginEvent.h  AKPointerSwipeEndEvent.h  AKPointerSwipeUpdateEvent.h  AKRenderEvent.h  AKSceneChangedEvent.cpp  AKSceneChangedEvent.h  AKStateActivatedEvent.h  AKStateDeactivatedEvent.h  AKStateEvent.h  AKTouchCancelEvent.h  AKTouchDownEvent.h  AKTouchEvent.cpp  AKTouchEvent.h  AKTouchFrameEvent.h  AKTouchMoveEvent.h  AKTouchUpEvent.h  (+4 more)
src/AK/input/: AKKeyboard.cpp  AKKeyboard.h  AKKeymap.cpp  AKKeymap.h  AKPointer.h
src/AK/nodes/: AKBakeable.cpp  AKBakeable.h  AKButton.cpp  AKButton.h  AKContainer.h  AKCoreTextEditor.cpp  AKCoreTextEditor.h  AKHThreePatch.cpp  AKHThreePatch.h  AKImage.cpp  AKImage.h  AKImageFrame.cpp  AKImageFrame.h  AKNode.cpp  AKNode.h  AKPath.cpp  AKPath.h  AKRenderable.cpp  AKRenderable.h  AKRenderableImage.cpp  AKRenderableImage.h  AKRenderableRect.cpp  AKRenderableRect.h  AKRoundContainer.cpp  AKRoundContainer.h  AKScroll.cpp  AKScroll.h  AKScrollBar.cpp  AKScrollBar.h  AKSimpleText.cpp  AKSimpleText.h  AKSolidColor.cpp  AKSolidColor.h  AKSubScene.cpp  AKSubScene.h  AKText.cpp  AKText.h  AKTextCaret.cpp  AKTextCaret.h  AKTextField.cpp  (+7 more)
src/AK/utils/: AKImageLoader.cpp  AKImageLoader.h
src/CZ/AK/: AK.cpp  AK.h  AKAlignment.h  AKApp.cpp  AKApp.h  AKBackgroundDamageTracker.h  AKBorderRadius.h  AKChanges.h  AKColorRole.h  AKColorTheme.cpp  AKColorTheme.h  AKColors.h  AKCursor.cpp  AKCursor.h  AKIconFont.cpp  AKIconFont.h  AKLayout.cpp  AKLayout.h  AKLog.cpp  AKLog.h  AKObject.h  AKRRect.h  AKScene.cpp  AKScene.h  AKTarget.cpp  AKTarget.h  AKTheme.cpp  AKTheme.h  AKVibrancy.h  CZKayVersion.h.in
src/CZ/Marco/: MApplication.cpp  MApplication.h  MProxy.h  MScreen.h  MTheme.cpp  MTheme.h  Marco.h
src/Marco/: MApplication.cpp  MApplication.h  MProxy.h  MScreen.h  MTheme.cpp  MTheme.h  Marco.h
src/Marco/input/: MKeyboard.h  MPointer.cpp  MPointer.h
src/Marco/nodes/: MCSDShadow.cpp  MCSDShadow.h  MRootSurfaceNode.h  MVibrancyView.cpp  MVibrancyView.h
src/Marco/private/: MLayerSurfacePrivate.cpp  MLayerSurfacePrivate.h  MPopupPrivate.cpp  MPopupPrivate.h  MSubsurfacePrivate.cpp  MSubsurfacePrivate.h  MSurfacePrivate.cpp  MSurfacePrivate.h  MToplevelPrivate.cpp  MToplevelPrivate.h
src/Marco/protocols/: background-blur-client.h  invisible-region-client.h  lvr-background-blur-client.h  svg-path-client.h  svg-path.xml  viewporter-client.h
src/TODO/: AKButton.cpp  AKButton.h  AKCoreTextEditor.cpp  AKCoreTextEditor.h  AKImageFrame.cpp  AKImageFrame.h  AKPath.cpp  AKPath.h  AKRoundContainer.cpp  AKRoundContainer.h  AKScroll.cpp  AKScroll.h  AKScrollBar.cpp  AKScrollBar.h  AKText.cpp  AKText.h  AKTextCaret.cpp  AKTextCaret.h  AKTextField.cpp  AKTextField.h  AKThreeImagePatch.cpp  AKThreeImagePatch.h  AKWindowButton.cpp  AKWindowButton.h  AKWindowButtonGroup.cpp  AKWindowButtonGroup.h
src/examples/kay-wayland-client/: main.cpp  meson.build
src/private/: AKApplication.cpp  AKNodePrivate.h
subprojects/: XDGKit.wrap  plutosvg.wrap  plutovg.wrap
(+136 files in other folders)
